# HPGe-Example-G4

./: CMakeLists.txt  README.md  Simulation.cc  run.mac  vis.mac
include/: Action.hh  Detector.hh  DetectorConstruction.hh  Event.hh  Hit.hh  ParticleGenerator.hh  PhysicsList.hh  Run.hh
src/: Action.cc  Detector.cc  DetectorConstruction.cc  Event.cc  Hit.cc  ParticleGenerator.cc  PhysicsList.cc  Run.cc
